--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,14 @@
 body {
     background-color: #009f6b;
     font-family: "Raleway", sans-serif;
-    color: #445361;
+    color: #FAF9F6;
 }
 
 .info-container {
     height: 100vh;
     width: 30%;
     background-color: #009966;
+    padding-top: 75px;
 }
 
 .logo {
@@ -23,10 +24,35 @@ body {
 .about-container {
     color: #FAF9F6;
     width: 90%;
-    height: 250px;
     margin: 50px auto;
     text-align: center;
 }
+
+.course-container {
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.course-about {
+    height: 125px;
+    width: 80%;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.easy-difficulty {
+    background-color: #8CE1CF;
+}
+
+.hard-difficulty {
+    background-color: #EA4D3D;
+}
+
+
 
 @media (max-width: 320px) {
     .info-container {
@@ -38,8 +64,14 @@ body {
 
 @media (max-width: 992px) {
     .info-container {
-        height: 400px;
+        height: auto;
         width: 100%;
         background-color: #009966;
+        padding-top: 10px;
+    }
+
+    .course-about {
+        width: 70%;
+        margin: 10px 0 10px 0;
     }
 }
