Style: Updated width of course and about container for screens < 992px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,8 +70,12 @@ body {
         padding-top: 10px;
     }
 
+    .about-container {
+        width: 50%;
+    }
+
     .course-about {
-        width: 70%;
+        width: 50%;
         margin: 10px 0 10px 0;
     }
 }
