--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,14 +11,12 @@ body {
     width: 30%;
     background-color: #009966;
     padding-top: 75px;
+    text-align: center;
 }
 
 .logo {
-    width: 120px;
-    height: 70px;
-    display: block;
-    margin: auto;
-    padding-top: 30px;
+    width: 140px;
+    height: 100px;
 }
 
 .about-container {
@@ -29,7 +27,8 @@ body {
 
 .course-container {
     width: 100%;
-    height: 300px;
+    height: 320px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -37,7 +36,7 @@ body {
 }
 
 .course-about {
-    height: 125px;
+    height: 150px;
     width: 80%;
     border-radius: 10px;
     text-align: center;
@@ -49,6 +48,18 @@ body {
 
 .hard-difficulty {
     background-color: #EA4D3D;
+}
+
+.btn {
+    border-radius: 10px;
+    font-family: "Raleway", sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    background: #64C466;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    margin: auto;
+    border: 1px white;
 }
 
 
