--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,13 +19,14 @@ h4 {
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
     font-weight: 500;
+    padding: 5px 0 5px 0;
 }
 
 p {
     font-family: 'Raleway', sans-serif;
     letter-spacing: 1px;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 16px;
     margin: 5px 0 5px 0;
 }
 
@@ -53,7 +54,7 @@ aside {
 }
 
 .about-container {
-    width: 60%;
+    width: 80%;
     margin: 50px auto;
     text-align: center;
 }
