--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,8 @@ aside {
 
 .course-about {
     height: 150px;
-    width: 60%;
+    width: 70%;
+    padding: 10px;
     border-radius: 10px;
     text-align: center;
 }
