--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,17 +51,19 @@ aside {
 .logo {
     width: 140px;
     height: 90px;
+    margin-top: 25px;
 }
 
 .about-container {
     width: 80%;
-    margin: 50px auto;
+    margin: 25px auto;
     text-align: center;
 }
 
 .course-container {
     width: 100%;
     height: 320px;
+    margin: 25px 0 25px 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
