--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,11 @@ main {
 
 .main-contain {
     display: flex;
+    height: 95vh;
+    min-height: 830px;
 }
 
 aside {
-    height: 96vh;
     width: 30%;
     background-color: #009966;
     text-align: center;
@@ -99,7 +100,6 @@ aside {
 }
 
 .game-area {
-    height: 96vh;
     width: 70%;
 }
 
@@ -111,8 +111,8 @@ footer {
     background-color: #009966;
     text-align: center;
     font-size: 30px;
-    height: 3vh;
-    width: 100%;
+    height: 48px;
+    width: 30%;
 }
 
 @media (max-width: 992px) {
@@ -144,6 +144,10 @@ footer {
         height: auto;
         margin: 10px 0 10px 0;
         padding: 20px;
+    }
+
+    footer {
+        width: 100%;
     }
 }
 
