--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ footer {
     background-color: #009966;
     text-align: center;
     font-size: 30px;
-    height: 48px;
+    height: 5vh;
     width: 30%;
 }
 
