--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,9 @@ footer {
     font-size: 30px;
     height: 5vh;
     width: 30%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 @media (max-width: 992px) {
