--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,15 @@ p {
     margin: 5px 0 5px 0;
 }
 
+header {
+    background-color: #009966;
+    padding: 0 1rem;
+    height: 10vh;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+}
+
 main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
@@ -39,7 +48,7 @@ main {
 
 .main-contain {
     display: flex;
-    height: 95vh;
+    height: 85vh;
     min-height: 830px;
 }
 
