--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,10 @@ footer {
 
 @media (max-width: 992px) {
 
+    header {
+        width: 100%;
+    }
+
     .main-contain {
         width: 100%;
         flex-direction: column;
