Style: Updated header styling to remove redundant styles. Gave align-item to center img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,12 +39,12 @@ p {
 /* Header */
 header {
     background-color: #009966;
-    padding: 0 1rem;
     height: 15vh;
     min-height: 120px;
     width: 30%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .logo {
