--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,19 +79,20 @@ aside {
 
 .course-container {
     width: 100%;
-    height: 400px;
+    height: 450px;
     margin: 25px 0 25px 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .course-about {
     height: 170px;
-    width: 70%;
+    width: 60%;
+    max-width: 350px;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     text-align: center;
 }
 
@@ -133,6 +134,12 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+@media (max-width: 1200px) {
+    .course-about {
+        width: 80%;
+    }
 }
 
 /* Media query: screens less than 992px */
