Style: Added missing comment above body style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
     box-sizing: border-box;
 }
 
+/* General styles */
 body {
     background-color: #009f6b;
     font-family: "Raleway", sans-serif;
