Style: Added cursor pointer to footer link on hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,8 +124,9 @@ aside {
 }
 
 .btn:hover {
-    background: #4ebe4f;
+    background: #43BB45;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .game-area {
