--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ aside {
 .game-area {
     width: 840px;
     height: 840px;
-    background-color: #8CE1CF;
+    background-color: #009966;
 }
 
 .hidden {
