--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,14 +80,14 @@ aside {
 
 .about-container {
     width: 80%;
-    margin: 25px auto;
+    margin: 15px auto;
     text-align: center;
 }
 
 .course-container {
     width: 100%;
     height: 450px;
-    margin: 25px 0 25px 0;
+    margin: 15px 0;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -122,7 +122,6 @@ aside {
     padding: 10px 20px 10px 20px;
     text-decoration: none;
     border: 1px solid #009f6b;
-    margin: 10px;
 }
 
 .btn:hover {
