--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ aside {
     padding: 10px 20px 10px 20px;
     text-decoration: none;
     border: 1px solid #009f6b;
+    margin-bottom: 15px;
 }
 
 .btn:hover {
@@ -219,6 +220,7 @@ footer {
     }
 
     .course-about {
+        height: auto;
         width: 70%;
     }
 
