--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,7 @@ aside {
     width: 840px;
     height: 840px;
     background-color: #009966;
+    perspective: 1000px;
 }
 
 .card {
@@ -158,6 +159,18 @@ aside {
 }
 
 .flip {
+    transform: rotateY(180deg);
+}
+
+.front-face,
+.back-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.front-face {
     transform: rotateY(180deg);
 }
 
