--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,7 @@ aside {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-content: space-around;
 }
 
 .card {
