--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,10 @@ a {
     color: #383838;
 }
 
+.hidden {
+    display: none;
+}
+
 /* Header */
 header {
     background-color: #009966;
@@ -185,8 +189,39 @@ aside {
     transform: rotateY(180deg);
 }
 
-.hidden {
+.popup-modal {
     display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.popup-modal-content {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+}
+
+/* The Close Button */
+.modal-close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* Footer content*/
