--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,10 @@ a {
     display: none;
 }
 
+.margin-top {
+    margin-top: 20px;
+}
+
 /* Header */
 header {
     background-color: #009966;
@@ -143,7 +147,8 @@ aside {
 .game-contain {
     display: flex;
     flex: 1 0 auto;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .game-area {
@@ -155,6 +160,11 @@ aside {
     justify-content: space-between;
     flex-wrap: wrap;
     align-content: space-around;
+}
+
+.userDisplay {
+    display: none;
+    width: 840px;
 }
 
 .card {
@@ -207,6 +217,7 @@ aside {
     padding: 20px;
     border: 1px solid #888;
     width: 30%;
+    border-radius: 5px;
 }
 
 /* The Close Button */
@@ -222,6 +233,22 @@ aside {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.UserGameDetails {
+    margin-top: 30px;
+}
+
+.form-input {
+    height: 30px;
+    width: 60%;
+    color: #383838;
+    background: #fafafa;
+    border: 1px solid #383838;
+    border-radius: 5px;
+    padding: 0 10px;
+    margin-bottom: 10px;
+    font-family: 'Raleway', sans-serif;
 }
 
 /* Footer content*/
