--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,6 @@ aside {
 
 .game-area {
     width: 840px;
-    height: 840px;
     background-color: #009966;
     perspective: 1000px;
     display: flex;
@@ -173,6 +172,7 @@ aside {
     /* calc width to ensure they all fit on the board horizontally */
     width: calc(25% - 10px);
     margin: 1px;
+    margin-bottom: 10px;
     background-color: #163B7C;
     transform-style: preserve-3d;
     transition: transform 0.8s;
