Feat: Added Play Again button to give user functionality to restart game when they win

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,14 @@ aside {
     top: 2px;
 }
 
+.red-btn {
+    background: #F1373D;
+}
+
+.red-btn:hover {
+    background: #B9171C;
+}
+
 .game-contain {
     display: flex;
     flex: 1 0 auto;
