Feat: change .style to .classlist for modal in js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,10 @@ aside {
     border-radius: 5px;
 }
 
+.show {
+    display: block;
+}
+
 /* The Close Button */
 .modal-close {
     color: #aaa;
