Feat: Add media query for screens < 540px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,3 +373,15 @@ footer {
         width: 60%;
     }
 }
+
+/* Media query: screens less than 540px */
+@media (max-width: 540px) {
+
+    .user-display {
+        width: 90%;
+    }
+
+    .game-area {
+        width: 90%;
+    }
+}
